--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="headings">ABOUT ME</h1>
         <div id="pic">
             
-            <img src="/pf.jpg" alt="photo">
+            <img src="img/pf.jpg" alt="photo">
             <div id="intro">
                 <h2>PRIYA KUMARI</h2>
                 <P>I am a second-year undergraduate student from Electronics and Communication engineering branch at Madan Mohan Malviya University of Technology , Gorakhpur .
@@ -72,12 +72,12 @@
             <img src="/keith-misner-h0Vxgz5tyXA-unsplash.jpg" alt="loading">
             -->
             <div class="bo">
-                <img src="/p1.png" alt="project1 image">
+                <img src="img/p1.png" alt="project1 image">
                 <h2 class="headings">Online Meal</h2>
                 <p>This is a website where user can order food online.It is an application of html and css</p>
             </div>
             <div class="bo">
-                <img src="/p2.png" alt="project2 image">
+                <img src="img/p2.png" alt="project2 image">
                 <h2 class="headings">Portfolio website</h2>
                 <p>This is a potfolio website where I have mention my projects , my resume and about myself . From this website those who want to contact me can fill the form</p>
             </div>
@@ -109,7 +109,7 @@
         <h1 class="headings">SKILLS</h1>
         <div class="row">
             <div class="box">
-                <img src="/icon1.jpg" alt="wait">
+                <img src="img/icon1.jpg" alt="wait">
                 <h1 class="headings">
                     Frontend Developer
                 </h1>
@@ -117,14 +117,14 @@
             </div>
 
             <div class="box">
-                <img src="/icon2.png" alt="wait">
+                <img src="img/icon2.png" alt="wait">
                 <h1 class="headings">
                     Competitive Coding
                 </h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex tempora, suscipit tempore debitis magnam reprehenderit impedit quidem consequatur officia dolor quis iure corrupti eos dignissimos enim reiciendis dolore velit sapiente!</p>
             </div>
             <div class="box">
-                <img src="/icon3.jpg" alt="wait">
+                <img src="img/icon3.jpg" alt="wait">
                 <h1 class="headings">
                     MS Office
                 </h1>
